[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/editor/ItemEventPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/editor/VariableEventPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://DialougeEditor.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.000152588
margin_right = -0.00012207
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Select" type="Control" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 640.0
rect_min_size = Vector2( 100, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Select"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Dialogue" type="Button" parent="HBoxContainer/Select/VBoxContainer"]
margin_right = 100.0
margin_bottom = 20.0
text = "New Dialogue"

[node name="Load External" type="Button" parent="HBoxContainer/Select/VBoxContainer"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
text = "Load external"

[node name="Save External" type="Button" parent="HBoxContainer/Select/VBoxContainer"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
text = "Save External"

[node name="FileDialog" type="FileDialog" parent="HBoxContainer/Select"]
visible = true
margin_left = 681.039
margin_top = 23.8702
margin_right = 996.039
margin_bottom = 199.87
window_title = "Open a File"
mode = 0
access = 1
filters = PoolStringArray( "talk.tres" )
current_dir = "user://home/kvagram/Documents/projects/AdventureQuests/game"
current_path = "user://home/kvagram/Documents/projects/AdventureQuests/game/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 1004.0
margin_bottom = 640.0
rect_min_size = Vector2( 900, 200 )
tab_align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Tabs" parent="HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Editor" type="Tabs" parent="HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TabContainer/Editor"]
margin_left = 7.18921
margin_top = 1.18921
margin_right = 1013.19
margin_bottom = 559.189
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue editor panel" type="HBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer"]
margin_right = 1006.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controller" type="VBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel"]
margin_right = 50.0
margin_bottom = 88.0
rect_min_size = Vector2( 50, 50 )

[node name="lineIndex" type="Label" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Controller"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 20 )
text = "0"
align = 1
valign = 1

[node name="prev" type="Button" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Controller"]
margin_top = 24.0
margin_right = 50.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 30 )
text = "Prev"

[node name="next" type="Button" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Controller"]
margin_top = 58.0
margin_right = 50.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 30 )
text = "next"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel"]
margin_left = 54.0
margin_right = 654.0
margin_bottom = 88.0
rect_min_size = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character name" type="LineEdit" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/VBoxContainer"]
margin_right = 600.0
margin_bottom = 24.0
rect_min_size = Vector2( 600, 20 )
placeholder_text = "Name Namerson the Third"

[node name="Dialouge" type="TextEdit" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/VBoxContainer"]
margin_top = 28.0
margin_right = 600.0
margin_bottom = 88.0
rect_min_size = Vector2( 600, 60 )

[node name="Audio controls" type="VBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel"]
margin_left = 658.0
margin_right = 841.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Audio controls"]
margin_right = 183.0
margin_bottom = 14.0
text = "Audio/voice acting (secunds)"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Audio controls"]
margin_top = 18.0
margin_right = 183.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Audio controls/HBoxContainer"]
margin_top = 5.0
margin_right = 47.0
margin_bottom = 19.0
text = "Start_at"

[node name="audio_start_at" type="LineEdit" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Audio controls/HBoxContainer"]
margin_left = 51.0
margin_right = 109.0
margin_bottom = 24.0
placeholder_text = "0.000"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Audio controls"]
margin_top = 46.0
margin_right = 183.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Audio controls/HBoxContainer2"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "End_at "

[node name="audio_end_at" type="LineEdit" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Audio controls/HBoxContainer2"]
margin_left = 49.0
margin_right = 107.0
margin_bottom = 24.0
placeholder_text = "5.000"

[node name="Add action menu" type="HBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer"]
margin_top = 92.0
margin_right = 1006.0
margin_bottom = 116.0

[node name="Add event" type="VBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Add action menu"]
margin_right = 220.0
margin_bottom = 24.0
rect_min_size = Vector2( 220, 0 )

[node name="Button" type="Button" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Add action menu/Add event"]
margin_right = 220.0
margin_bottom = 20.0
text = "+ Add event"

[node name="EventPanel container" type="VBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Add action menu/Add event"]
margin_top = 24.0
margin_right = 220.0
margin_bottom = 24.0

[node name="EventPanel" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Add action menu/Add event/EventPanel container" instance=ExtResource( 1 )]
margin_right = 220.0

[node name="Set variable" type="VBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Add action menu"]
margin_left = 224.0
margin_right = 351.0
margin_bottom = 24.0

[node name="Button" type="Button" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Add action menu/Set variable"]
margin_right = 127.0
margin_bottom = 20.0
text = "+ Add set variable"

[node name="EventPanel container" type="VBoxContainer" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Add action menu/Set variable"]
margin_top = 24.0
margin_right = 127.0
margin_bottom = 24.0

[node name="Add or Remove item" parent="HBoxContainer/TabContainer/Editor/VBoxContainer/Add action menu/Set variable/EventPanel container" instance=ExtResource( 2 )]
margin_right = 127.0

[connection signal="pressed" from="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Controller/prev" to="HBoxContainer/TabContainer" method="_on_prev_line"]
[connection signal="pressed" from="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/Controller/next" to="HBoxContainer/TabContainer" method="_on_next_line"]
[connection signal="text_changed" from="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/VBoxContainer/Character name" to="HBoxContainer/TabContainer" method="_on_Character_name_text_changed"]
[connection signal="text_changed" from="HBoxContainer/TabContainer/Editor/VBoxContainer/Dialogue editor panel/VBoxContainer/Dialouge" to="HBoxContainer/TabContainer" method="_on_Dialouge_text_changed"]
