extends TabContainer

export var prevBtn : Button
export var nextBtn : Button
export var lineIndex : Label



# Declare member variables here. Examples:
# var a = 2
# var b = "text"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_prev_line():
	pass # Replace with function body.


func _on_next_line():
	pass # Replace with function body.


func _on_Character_name_text_changed(new_text):
	pass # Replace with function body.


func _on_Dialouge_text_changed():
	pass # Replace with function body.
